src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    APOSTROFE
    ARROBA
    ASPAS
    CASE
    CLONE
    COMMENT_MULTI
    COMMENT_SINGLE
    CONCATENATE
    CRASE
    DECLARE
    ENDDECLARE
    IDENTATION
    OR
    VAR

Grammar

Rule 0     S' -> main
Rule 1     main -> BEGIN_PROGRAM main_INNER END_PROGRAM
Rule 2     main -> BEGIN_PROGRAM END_PROGRAM
Rule 3     inner_statement -> function_declaration_statement
Rule 4     inner_statement -> statement
Rule 5     statement -> expr SEMICOLON
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> do_statement
Rule 9     statement -> for_statement
Rule 10    statement -> break_statement
Rule 11    statement -> continue_statement
Rule 12    statement -> return_statement
Rule 13    statement -> GLOBAL global_var statement_COLON_GLOBAL SEMICOLON
Rule 14    statement -> GLOBAL global_var SEMICOLON
Rule 15    if_statement -> statement_if if_statement_complement
Rule 16    if_statement -> statement_if
Rule 17    if_statement_complement -> statement_elseif
Rule 18    if_statement_complement -> statement_elseif statement_else
Rule 19    if_statement_complement -> statement_else
Rule 20    while_statement -> WHILE expr_parentheses statement_BLOCK_OPT
Rule 21    do_statement -> DO statement_BLOCK_OPT WHILE expr_parentheses SEMICOLON
Rule 22    break_statement -> BREAK expr SEMICOLON
Rule 23    break_statement -> BREAK SEMICOLON
Rule 24    continue_statement -> CONTINUE expr SEMICOLON
Rule 25    continue_statement -> CONTINUE SEMICOLON
Rule 26    return_statement -> RETURN expr SEMICOLON
Rule 27    return_statement -> RETURN SEMICOLON
Rule 28    for_statement -> FOR LPAREN for_parameters RPAREN statement_BLOCK_OPT
Rule 29    for_parameters -> SEMICOLON SEMICOLON
Rule 30    for_parameters -> for_expr_OPT SEMICOLON SEMICOLON
Rule 31    for_parameters -> for_expr_OPT SEMICOLON for_expr_OPT SEMICOLON
Rule 32    for_parameters -> for_expr_OPT SEMICOLON SEMICOLON for_expr_OPT
Rule 33    for_parameters -> SEMICOLON for_expr_OPT SEMICOLON
Rule 34    for_parameters -> SEMICOLON for_expr_OPT SEMICOLON for_expr_OPT
Rule 35    for_parameters -> SEMICOLON SEMICOLON for_expr_OPT
Rule 36    for_parameters -> for_expr_OPT SEMICOLON for_expr_OPT SEMICOLON for_expr_OPT
Rule 37    global_var -> VARIABLE
Rule 38    global_var -> DOLAR VARIABLE
Rule 39    global_var -> DOLAR LKEY expr RKEY
Rule 40    statement_COLON_GLOBAL -> COLON global_var statement_COLON_GLOBAL
Rule 41    statement_COLON_GLOBAL -> COLON global_var
Rule 42    ampersand_variable -> AMPERSAND VARIABLE
Rule 43    ampersand_variable -> VARIABLE
Rule 44    expr_parentheses -> LPAREN expr RPAREN
Rule 45    statement_if -> IF expr_parentheses statement_BLOCK_OPT
Rule 46    statement_elseif -> ELSEIF expr_parentheses statement_BLOCK_OPT
Rule 47    statement_else -> ELSE statement_BLOCK_OPT
Rule 48    statement_foreach -> FOREACH LPAREN expr AS ampersand_variable RPAREN statement_BLOCK_OPT
Rule 49    statement_foreach -> FOREACH LPAREN expr AS ampersand_variable ATTR_ASSOC ampersand_variable RPAREN statement_BLOCK_OPT
Rule 50    for_expr_OPT -> expr for_expr_COLON_EXPR
Rule 51    for_expr_OPT -> expr
Rule 52    function_call -> ID LPAREN function_call_parameter_list RPAREN
Rule 53    function_call -> base_variable
Rule 54    function_call_parameter_list -> function_call_parameter function_call_list_COLON_FUNCTION
Rule 55    function_call_parameter_list -> <empty>
Rule 56    function_call_parameter -> variable
Rule 57    function_call_parameter -> AMPERSAND VARIABLE
Rule 58    assignment_list_element -> variable
Rule 59    assignment_list_element -> LIST LPAREN assignment_list_element assignment_list_element_COLON_ASSIGNMENT RPAREN
Rule 60    unary_operator -> EXC_DOT
Rule 61    unary_operator -> PLUS
Rule 62    unary_operator -> MINUS
Rule 63    type_cast_operator -> INT_TYPE
Rule 64    type_cast_operator -> DOUBLE_TYPE
Rule 65    type_cast_operator -> FLOAT_TYPE
Rule 66    type_cast_operator -> REAL_TYPE
Rule 67    type_cast_operator -> STRING_TYPE
Rule 68    type_cast_operator -> ARRAY_TYPE
Rule 69    type_cast_operator -> BOOLEAN_TYPE
Rule 70    type_cast_operator -> BOOL_TYPE
Rule 71    type_cast_operator -> UNSET
Rule 72    arithmetic_expr -> arithmetic_expr PLUS arithmetic_expr
Rule 73    arithmetic_expr -> arithmetic_expr MINUS arithmetic_expr
Rule 74    arithmetic_expr -> arithmetic_expr TIMES arithmetic_expr
Rule 75    arithmetic_expr -> arithmetic_expr DIVIDE arithmetic_expr
Rule 76    arithmetic_expr -> LPAREN arithmetic_expr RPAREN
Rule 77    arithmetic_expr -> NUMBER_INTEGER
Rule 78    arithmetic_expr -> NUMBER_REAL
Rule 79    assign_operator -> ADD_ASSIGN
Rule 80    assign_operator -> SUB_ASSIGN
Rule 81    assign_operator -> MOD_ASSIGN
Rule 82    assign_operator -> PLUS_ASSIGN
Rule 83    assign_operator -> DIVIDE_ASSIGN
Rule 84    assign_operator -> ASSIGN
Rule 85    arithmetic_operator -> PLUS
Rule 86    arithmetic_operator -> DIVIDE
Rule 87    arithmetic_operator -> PERCENT
Rule 88    arithmetic_operator -> TIMES
Rule 89    arithmetic_operator -> MINUS
Rule 90    comparission_operator -> EQUALS
Rule 91    comparission_operator -> GREAT_THAN
Rule 92    comparission_operator -> LESS_THAN
Rule 93    comparission_operator -> LESS_EQUAL
Rule 94    comparission_operator -> GREAT_EQUAL
Rule 95    comparission_operator -> NOT_EQUAL
Rule 96    comparission_operator -> LEFT_LOGICAL
Rule 97    comparission_operator -> RIGHT_LOGICAL
Rule 98    expr -> INCREMENT variable
Rule 99    expr -> variable INCREMENT
Rule 100   expr -> DECREMENT variable
Rule 101   expr -> variable DECREMENT
Rule 102   expr -> variable LBRACKET expr RBRACKET
Rule 103   expr -> LPAREN expr RPAREN
Rule 104   expr -> unary_operator expr
Rule 105   expr -> expr INTE_DOT expr DDOT expr
Rule 106   expr -> expr comparission_operator expr
Rule 107   expr -> variable assign_operator expr
Rule 108   expr -> variable assign_operator AMPERSAND expr
Rule 109   expr -> expr arithmetic_operator expr
Rule 110   expr -> LPAREN type_cast_operator RPAREN expr
Rule 111   expr -> EXIT expr_EXIT
Rule 112   expr -> DIE expr_EXIT
Rule 113   expr -> ARRAY_TYPE LPAREN array_pair_list RPAREN
Rule 114   expr -> ARRAY_TYPE LPAREN RPAREN
Rule 115   expr -> variable
Rule 116   expr -> function_call
Rule 117   expr -> NUMBER_REAL
Rule 118   expr -> NUMBER_INTEGER
Rule 119   expr -> CONSTANT_ENCAPSED_STRING
Rule 120   expr -> TRUE
Rule 121   expr -> FALSE
Rule 122   encaps -> encaps_var
Rule 123   encaps -> VARIABLE
Rule 124   encaps -> LPAREN
Rule 125   encaps -> RPAREN
Rule 126   encaps -> LKEY
Rule 127   encaps -> RKEY
Rule 128   encaps_var -> VARIABLE encaps_var_OPT
Rule 129   encaps_var -> DOLAR LBRACKET expr RBRACKET
Rule 130   encaps_var -> DOLAR LKEY ID LBRACKET expr RBRACKET RKEY
Rule 131   encaps_var -> LKEY variable RKEY
Rule 132   encaps_var_OPT -> LBRACKET encaps_var_offset RBRACKET
Rule 133   encaps_var_OPT -> <empty>
Rule 134   encaps_var_offset -> STRING
Rule 135   encaps_var_offset -> VARIABLE
Rule 136   expr_EXIT -> exit_expr
Rule 137   expr_EXIT -> <empty>
Rule 138   exit_expr -> LPAREN expr RPAREN
Rule 139   exit_expr -> LPAREN RPAREN
Rule 140   variable -> base_variable
Rule 141   base_variable -> reference_variable
Rule 142   base_variable -> simple_indirect_reference_DOLAR reference_variable
Rule 143   reference_variable -> compound_variable reference_variable_SELECTOR
Rule 144   reference_variable -> compound_variable
Rule 145   compound_variable -> VARIABLE
Rule 146   compound_variable -> DOLAR LKEY expr RKEY
Rule 147   selector -> LBRACKET expr RBRACKET
Rule 148   selector -> LBRACKET RBRACKET
Rule 149   function_declaration_statement -> FUNCTION ID LPAREN RPAREN LKEY RKEY
Rule 150   function_declaration_statement -> FUNCTION AMPERSAND ID LPAREN RPAREN LKEY RKEY
Rule 151   function_declaration_statement -> FUNCTION AMPERSAND ID LPAREN parameter_list RPAREN LKEY RKEY
Rule 152   function_declaration_statement -> FUNCTION AMPERSAND ID LPAREN RPAREN LKEY inner_statement_MUL RKEY
Rule 153   function_declaration_statement -> FUNCTION AMPERSAND ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
Rule 154   function_declaration_statement -> FUNCTION ID LPAREN parameter_list RPAREN LKEY RKEY
Rule 155   function_declaration_statement -> FUNCTION ID LPAREN RPAREN LKEY inner_statement_MUL RKEY
Rule 156   function_declaration_statement -> FUNCTION ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
Rule 157   parameter_list -> parameter parameter_list_COLON_PARAMETER
Rule 158   parameter_list -> parameter
Rule 159   parameter -> VARIABLE
Rule 160   parameter -> VARIABLE ASSIGN static_scalar
Rule 161   parameter -> parameter_type VARIABLE
Rule 162   parameter -> parameter_type AMPERSAND VARIABLE
Rule 163   parameter -> AMPERSAND VARIABLE
Rule 164   parameter -> AMPERSAND VARIABLE ASSIGN static_scalar
Rule 165   parameter -> parameter_type AMPERSAND VARIABLE ASSIGN static_scalar
Rule 166   parameter_type -> INT_TYPE
Rule 167   parameter_type -> BOOLEAN_TYPE
Rule 168   parameter_type -> STRING_TYPE
Rule 169   parameter_type -> FLOAT_TYPE
Rule 170   parameter_type -> ARRAY_TYPE
Rule 171   parameter_type -> BOOL_TYPE
Rule 172   parameter_type -> REAL_TYPE
Rule 173   parameter_type -> DOUBLE_TYPE
Rule 174   static_scalar -> common_scalar
Rule 175   static_scalar -> PLUS static_scalar
Rule 176   static_scalar -> MINUS static_scalar
Rule 177   common_scalar -> NUMBER_REAL
Rule 178   common_scalar -> NUMBER_INTEGER
Rule 179   common_scalar -> CONSTANT_ENCAPSED_STRING
Rule 180   array_pair_list -> array_pair array_pair_list_ARR_PAIR
Rule 181   array_pair_list -> array_pair
Rule 182   array_pair -> expr
Rule 183   array_pair -> expr array_pair_ATTR_EXPR_OPT
Rule 184   array_pair -> array_pair_EXPR_ATTR_OPT AMPERSAND variable
Rule 185   array_pair -> AMPERSAND variable
Rule 186   main_INNER -> inner_statement main_INNER
Rule 187   main_INNER -> inner_statement
Rule 188   inner_statement_MUL -> inner_statement inner_statement_MUL
Rule 189   inner_statement_MUL -> inner_statement
Rule 190   statement_MUL -> statement statement_MUL
Rule 191   statement_MUL -> statement
Rule 192   for_expr_COLON_EXPR -> COLON expr for_expr_COLON_EXPR
Rule 193   for_expr_COLON_EXPR -> COLON expr
Rule 194   statement_BLOCK_OPT -> statement
Rule 195   statement_BLOCK_OPT -> LKEY statement_MUL RKEY
Rule 196   statement_BLOCK_OPT -> LKEY RKEY
Rule 197   function_call_list_COLON_FUNCTION -> COLON function_call_parameter function_call_list_COLON_FUNCTION
Rule 198   function_call_list_COLON_FUNCTION -> <empty>
Rule 199   expr_without_variable_COLON_ASSIGNMENT -> COLON assignment_list_element expr_without_variable_COLON_ASSIGNMENT
Rule 200   expr_without_variable_COLON_ASSIGNMENT -> <empty>
Rule 201   assignment_list_element_COLON_ASSIGNMENT -> COLON assignment_list_element assignment_list_element_COLON_ASSIGNMENT
Rule 202   assignment_list_element_COLON_ASSIGNMENT -> <empty>
Rule 203   parameter_list_COLON_PARAMETER -> COLON parameter parameter_list_COLON_PARAMETER
Rule 204   parameter_list_COLON_PARAMETER -> COLON parameter
Rule 205   reference_variable_SELECTOR -> selector reference_variable_SELECTOR
Rule 206   reference_variable_SELECTOR -> selector
Rule 207   simple_indirect_reference_DOLAR -> DOLAR simple_indirect_reference_DOLAR
Rule 208   simple_indirect_reference_DOLAR -> DOLAR
Rule 209   array_pair_list_ARR_PAIR -> COLON array_pair array_pair_list_ARR_PAIR
Rule 210   array_pair_list_ARR_PAIR -> COLON array_pair
Rule 211   array_pair_ATTR_EXPR_OPT -> ATTR_ASSOC expr
Rule 212   array_pair_ATTR_EXPR_OPT -> <empty>
Rule 213   array_pair_EXPR_ATTR_OPT -> expr ATTR_ASSOC

Terminals, with rules where they appear

ADD_ASSIGN           : 79
AMPERSAND            : 42 57 108 150 151 152 153 162 163 164 165 184 185
AND                  : 
APOSTROFE            : 
ARRAY_TYPE           : 68 113 114 170
ARROBA               : 
AS                   : 48 49
ASPAS                : 
ASSIGN               : 84 160 164 165
ATTR_ASSOC           : 49 211 213
BEGIN_PROGRAM        : 1 2
BOOLEAN_TYPE         : 69 167
BOOL_TYPE            : 70 171
BREAK                : 22 23
CASE                 : 
CLONE                : 
COLON                : 40 41 192 193 197 199 201 203 204 209 210
COMMENT_MULTI        : 
COMMENT_SINGLE       : 
CONCATENATE          : 
CONSTANT_ENCAPSED_STRING : 119 179
CONTINUE             : 24 25
CRASE                : 
DDOT                 : 105
DECLARE              : 
DECREMENT            : 100 101
DIE                  : 112
DIVIDE               : 75 86
DIVIDE_ASSIGN        : 83
DO                   : 21
DOLAR                : 38 39 129 130 146 207 208
DOUBLE_TYPE          : 64 173
ELSE                 : 47
ELSEIF               : 46
ENDDECLARE           : 
END_PROGRAM          : 1 2
EQUALS               : 90
EXC_DOT              : 60
EXIT                 : 111
FALSE                : 121
FLOAT_TYPE           : 65 169
FOR                  : 28
FOREACH              : 48 49
FUNCTION             : 149 150 151 152 153 154 155 156
GLOBAL               : 13 14
GREAT_EQUAL          : 94
GREAT_THAN           : 91
ID                   : 52 130 149 150 151 152 153 154 155 156
IDENTATION           : 
IF                   : 45
INCREMENT            : 98 99
INTE_DOT             : 105
INT_TYPE             : 63 166
LBRACKET             : 102 129 130 132 147 148
LEFT_LOGICAL         : 96
LESS_EQUAL           : 93
LESS_THAN            : 92
LIST                 : 59
LKEY                 : 39 126 130 131 146 149 150 151 152 153 154 155 156 195 196
LPAREN               : 28 44 48 49 52 59 76 103 110 113 114 124 138 139 149 150 151 152 153 154 155 156
MINUS                : 62 73 89 176
MOD_ASSIGN           : 81
NOT_EQUAL            : 95
NUMBER_INTEGER       : 77 118 178
NUMBER_REAL          : 78 117 177
OR                   : 
PERCENT              : 87
PLUS                 : 61 72 85 175
PLUS_ASSIGN          : 82
RBRACKET             : 102 129 130 132 147 148
REAL_TYPE            : 66 172
RETURN               : 26 27
RIGHT_LOGICAL        : 97
RKEY                 : 39 127 130 131 146 149 150 151 152 153 154 155 156 195 196
RPAREN               : 28 44 48 49 52 59 76 103 110 113 114 125 138 139 149 150 151 152 153 154 155 156
SEMICOLON            : 5 13 14 21 22 23 24 25 26 27 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36
STRING               : 134
STRING_TYPE          : 67 168
SUB_ASSIGN           : 80
TIMES                : 74 88
TRUE                 : 120
UNSET                : 71
VAR                  : 
VARIABLE             : 37 38 42 43 57 123 128 135 145 159 160 161 162 163 164 165
WHILE                : 20 21
error                : 

Nonterminals, with rules where they appear

ampersand_variable   : 48 49 49
arithmetic_expr      : 72 72 73 73 74 74 75 75 76
arithmetic_operator  : 109
array_pair           : 180 181 209 210
array_pair_ATTR_EXPR_OPT : 183
array_pair_EXPR_ATTR_OPT : 184
array_pair_list      : 113
array_pair_list_ARR_PAIR : 180 209
assign_operator      : 107 108
assignment_list_element : 59 199 201
assignment_list_element_COLON_ASSIGNMENT : 59 201
base_variable        : 53 140
break_statement      : 10
common_scalar        : 174
comparission_operator : 106
compound_variable    : 143 144
continue_statement   : 11
do_statement         : 8
encaps               : 
encaps_var           : 122
encaps_var_OPT       : 128
encaps_var_offset    : 132
exit_expr            : 136
expr                 : 5 22 24 26 39 44 48 49 50 51 102 103 104 105 105 105 106 106 107 108 109 109 110 129 130 138 146 147 182 183 192 193 211 213
expr_EXIT            : 111 112
expr_parentheses     : 20 21 45 46
expr_without_variable_COLON_ASSIGNMENT : 199
for_expr_COLON_EXPR  : 50 192
for_expr_OPT         : 30 31 31 32 32 33 34 34 35 36 36 36
for_parameters       : 28
for_statement        : 9
function_call        : 116
function_call_list_COLON_FUNCTION : 54 197
function_call_parameter : 54 197
function_call_parameter_list : 52
function_declaration_statement : 3
global_var           : 13 14 40 41
if_statement         : 6
if_statement_complement : 15
inner_statement      : 186 187 188 189
inner_statement_MUL  : 152 153 155 156 188
main                 : 0
main_INNER           : 1 186
parameter            : 157 158 203 204
parameter_list       : 151 153 154 156
parameter_list_COLON_PARAMETER : 157 203
parameter_type       : 161 162 165
reference_variable   : 141 142
reference_variable_SELECTOR : 143 205
return_statement     : 12
selector             : 205 206
simple_indirect_reference_DOLAR : 142 207
statement            : 4 190 191 194
statement_BLOCK_OPT  : 20 21 28 45 46 47 48 49
statement_COLON_GLOBAL : 13 40
statement_MUL        : 190 195
statement_else       : 18 19
statement_elseif     : 17 18
statement_foreach    : 
statement_if         : 15 16
static_scalar        : 160 164 165 175 176
type_cast_operator   : 110
unary_operator       : 104
variable             : 56 58 98 99 100 101 102 107 108 115 131 184 185
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . BEGIN_PROGRAM main_INNER END_PROGRAM
    (2) main -> . BEGIN_PROGRAM END_PROGRAM

    BEGIN_PROGRAM   shift and go to state 2

    main                           shift and go to state 1

state 1

    (0) S' -> main .



state 2

    (1) main -> BEGIN_PROGRAM . main_INNER END_PROGRAM
    (2) main -> BEGIN_PROGRAM . END_PROGRAM
    (186) main_INNER -> . inner_statement main_INNER
    (187) main_INNER -> . inner_statement
    (3) inner_statement -> . function_declaration_statement
    (4) inner_statement -> . statement
    (149) function_declaration_statement -> . FUNCTION ID LPAREN RPAREN LKEY RKEY
    (150) function_declaration_statement -> . FUNCTION AMPERSAND ID LPAREN RPAREN LKEY RKEY
    (151) function_declaration_statement -> . FUNCTION AMPERSAND ID LPAREN parameter_list RPAREN LKEY RKEY
    (152) function_declaration_statement -> . FUNCTION AMPERSAND ID LPAREN RPAREN LKEY inner_statement_MUL RKEY
    (153) function_declaration_statement -> . FUNCTION AMPERSAND ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
    (154) function_declaration_statement -> . FUNCTION ID LPAREN parameter_list RPAREN LKEY RKEY
    (155) function_declaration_statement -> . FUNCTION ID LPAREN RPAREN LKEY inner_statement_MUL RKEY
    (156) function_declaration_statement -> . FUNCTION ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
    (5) statement -> . expr SEMICOLON
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . do_statement
    (9) statement -> . for_statement
    (10) statement -> . break_statement
    (11) statement -> . continue_statement
    (12) statement -> . return_statement
    (13) statement -> . GLOBAL global_var statement_COLON_GLOBAL SEMICOLON
    (14) statement -> . GLOBAL global_var SEMICOLON
    (98) expr -> . INCREMENT variable
    (99) expr -> . variable INCREMENT
    (100) expr -> . DECREMENT variable
    (101) expr -> . variable DECREMENT
    (102) expr -> . variable LBRACKET expr RBRACKET
    (103) expr -> . LPAREN expr RPAREN
    (104) expr -> . unary_operator expr
    (105) expr -> . expr INTE_DOT expr DDOT expr
    (106) expr -> . expr comparission_operator expr
    (107) expr -> . variable assign_operator expr
    (108) expr -> . variable assign_operator AMPERSAND expr
    (109) expr -> . expr arithmetic_operator expr
    (110) expr -> . LPAREN type_cast_operator RPAREN expr
    (111) expr -> . EXIT expr_EXIT
    (112) expr -> . DIE expr_EXIT
    (113) expr -> . ARRAY_TYPE LPAREN array_pair_list RPAREN
    (114) expr -> . ARRAY_TYPE LPAREN RPAREN
    (115) expr -> . variable
    (116) expr -> . function_call
    (117) expr -> . NUMBER_REAL
    (118) expr -> . NUMBER_INTEGER
    (119) expr -> . CONSTANT_ENCAPSED_STRING
    (120) expr -> . TRUE
    (121) expr -> . FALSE
    (15) if_statement -> . statement_if if_statement_complement
    (16) if_statement -> . statement_if
    (20) while_statement -> . WHILE expr_parentheses statement_BLOCK_OPT
    (21) do_statement -> . DO statement_BLOCK_OPT WHILE expr_parentheses SEMICOLON
    (28) for_statement -> . FOR LPAREN for_parameters RPAREN statement_BLOCK_OPT
    (22) break_statement -> . BREAK expr SEMICOLON
    (23) break_statement -> . BREAK SEMICOLON
    (24) continue_statement -> . CONTINUE expr SEMICOLON
    (25) continue_statement -> . CONTINUE SEMICOLON
    (26) return_statement -> . RETURN expr SEMICOLON
    (27) return_statement -> . RETURN SEMICOLON
    (140) variable -> . base_variable
    (60) unary_operator -> . EXC_DOT
    (61) unary_operator -> . PLUS
    (62) unary_operator -> . MINUS
    (52) function_call -> . ID LPAREN function_call_parameter_list RPAREN
    (53) function_call -> . base_variable
    (45) statement_if -> . IF expr_parentheses statement_BLOCK_OPT
    (141) base_variable -> . reference_variable
    (142) base_variable -> . simple_indirect_reference_DOLAR reference_variable
    (143) reference_variable -> . compound_variable reference_variable_SELECTOR
    (144) reference_variable -> . compound_variable
    (207) simple_indirect_reference_DOLAR -> . DOLAR simple_indirect_reference_DOLAR
    (208) simple_indirect_reference_DOLAR -> . DOLAR
    (145) compound_variable -> . VARIABLE
    (146) compound_variable -> . DOLAR LKEY expr RKEY

    END_PROGRAM     shift and go to state 4
    FUNCTION        shift and go to state 8
    GLOBAL          shift and go to state 19
    INCREMENT       shift and go to state 20
    DECREMENT       shift and go to state 22
    LPAREN          shift and go to state 10
    EXIT            shift and go to state 24
    DIE             shift and go to state 25
    ARRAY_TYPE      shift and go to state 26
    NUMBER_REAL     shift and go to state 28
    NUMBER_INTEGER  shift and go to state 29
    CONSTANT_ENCAPSED_STRING shift and go to state 30
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    WHILE           shift and go to state 34
    DO              shift and go to state 35
    FOR             shift and go to state 36
    BREAK           shift and go to state 37
    CONTINUE        shift and go to state 38
    RETURN          shift and go to state 39
    EXC_DOT         shift and go to state 41
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    ID              shift and go to state 9
    IF              shift and go to state 44
    DOLAR           shift and go to state 48
    VARIABLE        shift and go to state 49

    main_INNER                     shift and go to state 3
    inner_statement                shift and go to state 5
    function_declaration_statement shift and go to state 6
    statement                      shift and go to state 7
    expr                           shift and go to state 11
    if_statement                   shift and go to state 12
    while_statement                shift and go to state 13
    do_statement                   shift and go to state 14
    for_statement                  shift and go to state 15
    break_statement                shift and go to state 16
    continue_statement             shift and go to state 17
    return_statement               shift and go to state 18
    variable                       shift and go to state 21
    unary_operator                 shift and go to state 23
    function_call                  shift and go to state 27
    statement_if                   shift and go to state 33
    base_variable                  shift and go to state 40
    reference_variable             shift and go to state 45
    simple_indirect_reference_DOLAR shift and go to state 46
    compound_variable              shift and go to state 47

state 3

    (1) main -> BEGIN_PROGRAM main_INNER . END_PROGRAM

    END_PROGRAM     shift and go to state 50


state 4

    (2) main -> BEGIN_PROGRAM END_PROGRAM .

    $end            reduce using rule 2 (main -> BEGIN_PROGRAM END_PROGRAM .)


state 5

    (186) main_INNER -> inner_statement . main_INNER
    (187) main_INNER -> inner_statement .
    (186) main_INNER -> . inner_statement main_INNER
    (187) main_INNER -> . inner_statement
    (3) inner_statement -> . function_declaration_statement
    (4) inner_statement -> . statement
    (149) function_declaration_statement -> . FUNCTION ID LPAREN RPAREN LKEY RKEY
    (150) function_declaration_statement -> . FUNCTION AMPERSAND ID LPAREN RPAREN LKEY RKEY
    (151) function_declaration_statement -> . FUNCTION AMPERSAND ID LPAREN parameter_list RPAREN LKEY RKEY
    (152) function_declaration_statement -> . FUNCTION AMPERSAND ID LPAREN RPAREN LKEY inner_statement_MUL RKEY
    (153) function_declaration_statement -> . FUNCTION AMPERSAND ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
    (154) function_declaration_statement -> . FUNCTION ID LPAREN parameter_list RPAREN LKEY RKEY
    (155) function_declaration_statement -> . FUNCTION ID LPAREN RPAREN LKEY inner_statement_MUL RKEY
    (156) function_declaration_statement -> . FUNCTION ID LPAREN parameter_list RPAREN LKEY inner_statement_MUL RKEY
    (5) statement -> . expr SEMICOLON
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . do_statement
    (9) statement -> . for_statement
    (10) statement -> . break_statement
    (11) statement -> . continue_statement
    (12) statement -> . return_statement
    (13) statement -> . GLOBAL global_var statement_COLON_GLOBAL SEMICOLON
    (14) statement -> . GLOBAL global_var SEMICOLON
    (98) expr -> . INCREMENT variable
    (99) expr -> . variable INCREMENT
    (100) expr -> . DECREMENT variable
    (101) expr -> . variable DECREMENT
    (102) expr -> . variable LBRACKET expr RBRACKET
    (103) expr -> . LPAREN expr RPAREN
    (104) expr -> . unary_operator expr
    (105) expr -> . expr INTE_DOT expr DDOT expr
    (106) expr -> . expr comparission_operator expr
    (107) expr -> . variable assign_operator expr
    (108) expr -> . variable assign_operator AMPERSAND expr
    (109) expr -> . expr arithmetic_operator expr
    (110) expr -> . LPAREN type_cast_operator RPAREN expr
    (111) expr -> . EXIT expr_EXIT
    (112) expr -> . DIE expr_EXIT
    (113) expr -> . ARRAY_TYPE LPAREN array_pair_list RPAREN
    (114) expr -> . ARRAY_TYPE LPAREN RPAREN
    (115) expr -> . variable
    (116) expr -> . function_call
    (117) expr -> . NUMBER_REAL
    (118) expr -> . NUMBER_INTEGER
    (119) expr -> . CONSTANT_ENCAPSED_STRING
    (120) expr -> . TRUE
    (121) expr -> . FALSE
    (15) if_statement -> . statement_if if_statement_complement
    (16) if_statement -> . statement_if
    (20) while_statement -> . WHILE expr_parentheses statement_BLOCK_OPT
    (21) do_statement -> . DO statement_BLOCK_OPT WHILE expr_parentheses SEMICOLON
    (28) for_statement -> . FOR LPAREN for_parameters RPAREN statement_BLOCK_OPT
    (22) break_statement -> . BREAK expr SEMICOLON
    (23) break_statement -> . BREAK SEMICOLON
    (24) continue_statement -> . CONTINUE expr SEMICOLON
    (25) continue_statement -> . CONTINUE SEMICOLON
    (26) return_statement -> . RETURN expr SEMICOLON
    (27) return_statement -> . RETURN SEMICOLON
    (140) variable -> . base_variable
    (60) unary_operator -> . EXC_DOT
    (61) unary_operator -> . PLUS
    (62) unary_operator -> . MINUS
    (52) function_call -> . ID LPAREN function_call_parameter_list RPAREN
    (53) function_call -> . base_variable
    (45) statement_if -> . IF expr_parentheses statement_BLOCK_OPT
    (141) base_variable -> . reference_variable
    (142) base_variable -> . simple_indirect_reference_DOLAR reference_variable
    (143) reference_variable -> . compound_variable reference_variable_SELECTOR
    (144) reference_variable -> . compound_variable
    (207) simple_indirect_reference_DOLAR -> . DOLAR simple_indirect_reference_DOLAR
    (208) simple_indirect_reference_DOLAR -> . DOLAR
    (145) compound_variable -> . VARIABLE
    (146) compound_variable -> . DOLAR LKEY expr RKEY

    END_PROGRAM     reduce using rule 187 (main_INNER -> inner_statement .)
    FUNCTION        shift and go to state 8
    GLOBAL          shift and go to state 19
    INCREMENT       shift and go to state 20
    DECREMENT       shift and go to state 22
    LPAREN          shift and go to state 10
    EXIT            shift and go to state 24
    DIE             shift and go to state 25
    ARRAY_TYPE      shift and go to state 26
    NUMBER_REAL     shift and go to state 28
    NUMBER_INTEGER  shift and go to state 29
    CONSTANT_ENCAPSED_STRING shift and go to state 30
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    WHILE           shift and go to state 34
    DO              shift and go to state 35
    FOR             shift and go to state 36
    BREAK           shift and go to state 37
    CONTINUE        shift and go to state 38
    RETURN          shift and go to state 39
    EXC_DOT         shift and go to state 41
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    ID              shift and go to state 9
    IF              shift and go to state 44
    DOLAR           shift and go to state 48
    VARIABLE        shift and go to state 49

    inner_statement                shift and go to state 5
    main_INNER                     shift and go to state 51
    function_declaration_statement shift and go to state 6
    statement                      shift and go to state 7
    expr                           shift and go to state 11
    if_statement                   shift and go to state 12
    while_statement                shift and go to state 13
    do_statement                   shift and go to state 14
    for_statement                  shift and go to state 15
    break_statement                shift and go to state 16
    continue_statement             shift and go to state 17
    return_statement               shift and go to state 18
    variable                       shift and go to state 21
    unary_operator                 shift and go to state 23
    function_call                  shift and go to state 27
    statement_if                   shift and go to state 33
    base_variable                  shift and go to state 40
    reference_variable             shift and go to state 45
    simple_indirect_reference_DOLAR shift and go to state 46
    compound_variable              shift and go to state 47

state 6

    (3) inner_statement -> function_declaration_statement .
